--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@ html, body {
     height: 100%;
     margin: 0;
 }
+
+.bg-custom {
+    background-image: url('/src/assets/rectangle.png'), linear-gradient(to bottom, #191817, #000);
+    background-size: cover;
+    background-position: center;
+}
